--- a/src/main/resources/theme/play/custom_games.fxml
+++ b/src/main/resources/theme/play/custom_games.fxml
@@ -24,70 +24,69 @@
         <GridPane fx:id="gamesGridPane">
             <columnConstraints>
                 <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="300.0"
-                                   prefWidth="300.0" fx:id="sidePaneColumn"/>
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints vgrow="NEVER"/>
-                <RowConstraints minHeight="10.0" vgrow="ALWAYS"/>
-            </rowConstraints>
-            <children>
-                <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
-                    <children>
-                        <HBox>
-                            <children>
-                                <FlowPane hgap="10.0" maxWidth="1.7976931348623157E308" vgap="10.0" HBox.hgrow="ALWAYS">
-                                    <children>
-                                        <JFXButton fx:id="createGameButton" defaultButton="true" minWidth="-Infinity"
-                                                   mnemonicParsing="false" onAction="#onCreateGameButtonClicked"
-                                                   styleClass="create-game-button" text="%games.create"/>
-                                        <JFXCheckBox fx:id="showPasswordProtectedGamesCheckBox" mnemonicParsing="false"
-                                                     text="%games.showPasswordProtectedGames"/>
-                                        <JFXCheckBox fx:id="showModdedGamesCheckBox" mnemonicParsing="false"
-                                                     text="%games.showModdedGames"/>
-                                        <JFXComboBox fx:id="chooseSortingTypeChoiceBox"/>
-                                        <Pane/>
-                                        <HBox alignment="BASELINE_LEFT"/>
-                                    </children>
-                                </FlowPane>
-                                <Button fx:id="toggleSidePaneButton" minWidth="-Infinity" mnemonicParsing="false"
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="300.0" prefWidth="300.0" fx:id="sidePaneColumn"/>
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints vgrow="NEVER"/>
+            <RowConstraints minHeight="10.0" vgrow="ALWAYS"/>
+        </rowConstraints>
+        <children>
+            <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0">
+                <children>
+                    <HBox>
+                        <children>
+                            <FlowPane hgap="10.0" maxWidth="1.7976931348623157E308" vgap="10.0" HBox.hgrow="ALWAYS">
+                                <children>
+                                    <JFXButton fx:id="createGameButton" defaultButton="true" minWidth="-Infinity"
+                                               mnemonicParsing="false" onAction="#onCreateGameButtonClicked"
+                                               text="%games.create"/>
+                                    <JFXCheckBox fx:id="showPasswordProtectedGamesCheckBox" mnemonicParsing="false"
+                                                 text="%games.showPasswordProtectedGames"/>
+                                    <JFXCheckBox fx:id="showModdedGamesCheckBox" mnemonicParsing="false"
+                                                 text="%games.showModdedGames"/>
+                                    <JFXComboBox fx:id="chooseSortingTypeChoiceBox"/>
+                                    <Pane/>
+                                    <HBox alignment="BASELINE_LEFT"/>
+                                </children>
+                            </FlowPane>
+                            <Button fx:id="toggleSidePaneButton" minWidth="-Infinity" mnemonicParsing="false"
                                         onAction="#toggleSidePane" text="%view.hideSidePane">
                                     <padding>
                                         <Insets right="50"/>
                                     </padding>
                                 </Button>
-                                <ToggleButton fx:id="tableButton" minWidth="-Infinity" mnemonicParsing="false"
-                                              onAction="#onTableButtonClicked" text="%view.table">
-                                    <toggleGroup>
-                                        <ToggleGroup fx:id="viewToggleGroup"/>
-                                    </toggleGroup>
-                                    <graphic>
-                                        <Label styleClass="icon" text=""/>
-                                    </graphic>
-                                </ToggleButton>
-                                <ToggleButton fx:id="tilesButton" minWidth="-Infinity" mnemonicParsing="false"
-                                              onAction="#onTilesButtonClicked" selected="true" text="%view.tiles"
-                                              toggleGroup="$viewToggleGroup">
-                                    <graphic>
-                                        <Label styleClass="icon" text=""/>
-                                    </graphic>
-                                </ToggleButton>
-                            </children>
-                        </HBox>
-                    </children>
-                    <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-                    </padding>
-                </VBox>
-                <ScrollPane fx:id="gameDetailPane" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1"
-                            GridPane.rowSpan="2147483647">
-                    <content>
-                        <fx:include fx:id="gameDetail" source="game_detail.fxml"/>
-                    </content>
-                </ScrollPane>
-                <AnchorPane fx:id="gameViewContainer" maxHeight="1.7976931348623157E308"
-                            maxWidth="1.7976931348623157E308" GridPane.rowIndex="1" prefWidth="10000"/>
-            </children>
-        </GridPane>
-    </children>
+                            <ToggleButton fx:id="tableButton" minWidth="-Infinity" mnemonicParsing="false"
+                                          onAction="#onTableButtonClicked" text="%view.table">
+                                <toggleGroup>
+                                    <ToggleGroup fx:id="viewToggleGroup"/>
+                                </toggleGroup>
+                                <graphic>
+                                    <Label styleClass="icon" text=""/>
+                                </graphic>
+                            </ToggleButton>
+                            <ToggleButton fx:id="tilesButton" minWidth="-Infinity" mnemonicParsing="false"
+                                          onAction="#onTilesButtonClicked" selected="true" text="%view.tiles"
+                                          toggleGroup="$viewToggleGroup">
+                                <graphic>
+                                    <Label styleClass="icon" text=""/>
+                                </graphic>
+                            </ToggleButton>
+                        </children>
+                    </HBox>
+                </children>
+                <padding>
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                </padding>
+            </VBox>
+            <ScrollPane fx:id="gameDetailPane" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1"
+                        GridPane.rowSpan="2147483647">
+                <content>
+                    <fx:include fx:id="gameDetail" source="game_detail.fxml"/>
+                </content>
+            </ScrollPane>
+            <AnchorPane fx:id="gameViewContainer" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                        GridPane.rowIndex="1" prefWidth="10000"/>
+        </children>
+    </GridPane>
+</children>
 </StackPane>
